fix: added z-index to hero button, allowing click events on smaller devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,6 +202,7 @@ main {
   color: #fff;
   border: 1px solid #fff;
   border-radius: 10px;
+  z-index: 100;
 }
 
 .hero_left button:hover {
